--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head><meta name="google-site-verification" content="ZwVxNk-WmuJv3eRZCJ2k_bfbSITBOQyeq5SdM6delMs" />
+
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
