--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head><meta name="google-site-verification" content="ZwVxNk-WmuJv3eRZCJ2k_bfbSITBOQyeq5SdM6delMs" />
-
-    
+<head>
+    <meta name="google-site-verification" content="6IM5MLHDlxUfz3e2YXDNDv3IvKdGf45WCTmPZy6lN7c" />    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Marketing Agency|Best Development </title>
